# wasm-performance-evaluation

./: README.md
canvas-html-demo/: Cargo.toml  LICENSE_MIT
canvas-html-demo/src/: lib.rs
canvas-html-demo/www/: index.html  index.js  package-lock.json  package.json
data-analysis/: .gitignore
data-analysis/analysis/: analysis.R  analysisProd.R
data-analysis/data-generation/: generate-data.py  javascript-data-render.csv  javascript-data-sort.csv  javascript-data.csv  webasm-data-render.csv  webasm-data-sort.csv  webasm-data.csv
data/slick/js-native/: js-experiment-results-render-native-slick.csv  js-experiment-results-sort-native-slick.csv  js-experiment-results-total-native-slick.csv
data/slick/js-quick-sort/: js-experiment-results-render-quick-sort-slick.csv  js-experiment-results-sort-quick-sort-slick.csv  js-experiment-results-total-quick-sort-slick.csv
data/slick/wasm-native/: wasm-experiment-results-render-native-slick.csv  wasm-experiment-results-sort-native-slick.csv  wasm-experiment-results-total-native-slick.csv
data/slick/wasm-quick-sort/: wasm-experiment-results-render-quick-sort-slick.csv  wasm-experiment-results-sort-quick-sort-slick.csv  wasm-experiment-results-total-quick-sort-slick.csv
react-demo/app/: package.json
react-demo/app/src/: App.tsx
react-demo/wasm/: Cargo.toml
slick-grid-demo/app/: package.json
slick-grid-demo/wasm/: Cargo.toml
tm-wasm-module/: Cargo.toml  index.html
tm-wasm-module/src/: lib.rs
websys-react-demo/app/: craco.config.js  package.json
websys-react-demo/wasm/: Makefile
(+43 files in other folders)
